--- a/zuulservice/src/main/resources/application.properties
+++ b/zuulservice/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=zuulservice
 
 #routes
 zuul.routes.auth.service-id=authentication
-zuul.routes.profile.service-id=user-profile
+zuul.routes.profile.service-id=profileforusers
 
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
