--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>authentication</module>
 		<module>zuulservice</module>
 		<module>users-profile</module>
+		<module>documentation-app</module>
 	</modules>
 
 
