--- a/zuulservice/src/main/resources/application.properties
+++ b/zuulservice/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=zuulservice
 #routes
 zuul.routes.auth.service-id=authentication
 zuul.routes.profile.service-id=users-profile
+zuul.routes.swagger.service-id=documentation-application
 
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
