--- a/zuulservice/src/main/resources/application.properties
+++ b/zuulservice/src/main/resources/application.properties
@@ -12,3 +12,12 @@ zuul.host.socket-timeout-millis=450000
 ribbon.eureka.enabled=true
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
+
+#zuul.prefix=/
+#zuul.ignored-services=*
+#
+#zuul.routes.auth.path=auth/**
+#zuul.routes.auth.service-id=authentication
+#
+#zuul.routes.profile.path=/**
+#zuul.routes.profile.service-id=users-profile
