--- a/zuulservice/src/main/resources/application.properties
+++ b/zuulservice/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 server.port=8097
 spring.application.name=zuulservice
 
+spring.datasource.url=jdbc:postgresql://localhost/jpa_demo
+spring.datasource.username=postgres
+spring.datasource.password=postgres1
+spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 #routes
 zuul.routes.auth.service-id=authentication
 zuul.routes.profile.service-id=users-profile
